gl33-master/src/test/deca/context/invalid/other/retourIncompatible11.deca
// Test de contexte invalide : valeur de retour fausse (boolean alors que la fonction est void)

class MyClass{

    void isPos(int a){
      if(a > 0){
        return true;
        }
      else{
        return false;
        }
    }
}

{
    MyClass m = new MyClass();
    boolean x = m.isPos(4);
}
